--- a/src/layout/Header/index.css
+++ b/src/layout/Header/index.css
@@ -6,7 +6,7 @@
   right: 50px;
   background-color: transparent;
   color: white;
-  z-index: 10;
+  z-index: 1;
 }
 
 .header.map-page {
